# Project-BICPV

./: .gitignore  DESPLIEGUE.md  Dockerfile.alert-monitor  README.md  alert_monitor.py  analisis.txt  apiDocs.md  cloudbuild.yaml  docker-compose.yml  package-lock.json  package.json  publisher_simulator.py  pyproject.toml  requirements.txt
.github/: README.md
.github/workflows/: deploy.yml  github-flow-ci.yml
app/: dependencies.py  main.py
app/routes/: api.py
backend/: Dockerfile.prod  RESULTADO_PRUEBAS.txt  pytest.ini  requirements.txt  run_tests.sh
backend/app/: db.py  main.py
backend/app/api/: routes_alerts.py  routes_analytics.py  routes_chart_data.py  routes_charts.py  routes_control.py  routes_efficiency.py  routes_export.py  routes_facades.py  routes_realtime.py  routes_reports.py  routes_sensors.py  routes_temperature.py
backend/app/core/: config.py
backend/app/services/: alerts_service.py  analytics_service.py  cache_controller.py  chart_manager.py  efficiency_service.py  export_service.py  pdf_service.py  storage_controller.py  temperature_service.py
backend/tests/: README.md  test_hu10_refrigeration_cycle.py  test_hu13_exchanger_comparison.py  test_hu15_automatic_alerts.py  test_hu17_performance_comparison.py  test_hu18_csv_export.py  test_hu21_alerts_history.py
core/: config.py  utils.py
frontend/: .dockerignore  .env.example  .prettierrc  Dockerfile.prod  README.md  README_TESTS.md  TEST_E2E_GUIDE.md  TEST_RESULTS_SUMMARY.md  analyze.sh  eslint.config.js  eslint.simple.config.js  eslint.working.config.js  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/__tests__/: GUIA_INSTALACION_TESTS.md  SPEECH_PRESENTACION.md
frontend/contexts/: RealtimeDataContext.tsx
frontend/public/: test-realtime.html
frontend/src/: App.tsx  RealtimeTestApp.tsx  main.tsx
frontend/src/__tests__/: PanelDetail.e2e.test.tsx  PanelDetail.integration.test.tsx  PanelDetail.integration.test.tsx.bak  setup.ts
frontend/src/components/: ComparisonChart.tsx  Header.tsx  Panel.tsx  PanelDetail.tsx  RealtimeDashboard.tsx  Sidebar.tsx  SystemAnalysis.tsx
frontend/src/pages/: Home.tsx
frontend/src/services/: api.ts
frontend/src/styles/: EfficiencyMetricsView.css  Panel.css  PanelDetail.css  SystemAnalysis.css  index.css
frontend/src/types/: Panel.d.ts
frontend/src/views/: AlertNotifications.tsx  AlertsHistory.tsx  EfficiencyMetricsView.tsx  ExportCSV.tsx  PDFExportButton.tsx  PerformanceComparison.tsx  PowerRadianceChart.tsx  RefrigerantCycle.tsx  TemperatureComparison.tsx  WaterTemperatures.tsx
ingestor/: Dockerfile  Dockerfile.prod  main.py  requirements.txt
initdb/: 002_create_alerts.sql  003_create_alerts_index.sql  init_timescaledb.sql
models/: domain_models.py  pydantic_models.py
mosquitto/config/: mosquitto.conf
repositories/: base.py  redis.py  timescale.py
scripts/: analyze_backend.sh  final_quality_check.sh  naming_validator.py
services/: alerts_manager.py  analytics_service.py  chart_manager.py  data_acquisition.py  data_processor.py  data_validation.py  facade_service.py  session_manager.py
src/: App.tsx
src/components/: Header.tsx  Panel.tsx  Sidebar.tsx
src/pages/: Home.tsx
src/styles/: index.css
src/types/: Panel.d.ts
terraform/: .gitignore  main.tf  terraform.tfvars.example  tfplan
tests/: test_api_endpoints.py
tools/: init_timescaledb.py  simulate_all_sensors.py
